--- a/train_and_deploy.ipynb
+++ b/train_and_deploy.ipynb
@@ -24,7 +24,8 @@
    "source": [
     "# TODO: Install any packages that you might need\n",
     "# For instance, you will need the smdebug package\n",
-    "!pip install smdebug"
+    "!pip install smdebug\n",
+    "!pip install torchvision"
    ]
   },
   {
@@ -36,6 +37,7 @@
     "# TODO: Import any packages that you might need\n",
     "# For instance you will need Boto3 and Sagemaker\n",
     "import os\n",
+    "from dataclasses import dataclass\n",
     "from IPython.display import HTML\n",
     "\n",
     "import sagemaker\n",
@@ -56,6 +58,52 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sess = sagemaker.Session()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@dataclass\n",
+    "class Config:\n",
+    "    BUCKET = sess.default_bucket()\n",
+    "    REGION = sess.boto_region_name\n",
+    "    ROLE = sagemaker.get_execution_role()\n",
+    "    SEED = 23\n",
+    "    INSTANCE_COUNT = 1\n",
+    "    MAX_JOBS = 4\n",
+    "    MAX_PARALLEL_JOBS = 2\n",
+    "    MONITORING_INTERVAL_MILLIS = 100\n",
+    "    PROFILE_EVERY_X_STEPS = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config = Config()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.environ[\"DEFAULT_S3_BUCKET\"] = f\"s3://{config.BUCKET}/\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -72,8 +120,37 @@
     "#TODO: Fetch and upload the data to AWS S3\n",
     "\n",
     "# Command to download and unzip data\n",
-    "!wget https://s3-us-west-1.amazonaws.com/udacity-aind/dog-project/dogImages.zip\n",
-    "!unzip dogImages.zip"
+    "!mkdir data\n",
+    "!wget https://github.com/DataScienceNigeria/Research-Papers-by-Data-Science-Nigeria/raw/master/AFRIFASHION1600:%20A%20Contemporary%20African%20Fashion%20Dataset%20for%20Computer%20Vision/data/AFRIFASHION1600.zip -P data\n",
+    "!unzip data/AFRIFASHION1600.zip -d data && rm data/AFRIFASHION1600.zip\n",
+    "!python dataset.py --dataset_path data/AFRIFASHION1600 --train_size 0.7 #--seed {c.SEED}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python oge/dataset.py --dataset_path data/AFRIFASHION1600 --train_size 0.7 #--seed {c.SEED}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!aws s3 sync data/AFRIFASHION1600 ${DEFAULT_BUCKET_NAME}afrifashion1600/ > data_upload.log 2>&1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!aws s3 ls -d ${DEFAULT_BUCKET_NAME}afrifashion1600/"
    ]
   },
   {
