include config class

--- a/train_and_deploy.ipynb
+++ b/train_and_deploy.ipynb
@@ -67,6 +67,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `Configuration`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -76,9 +83,10 @@
     "class Config:\n",
     "    BUCKET = sess.default_bucket()\n",
     "    REGION = sess.boto_region_name\n",
-    "    ROLE = sagemaker.get_execution_role()\n",
+    "    EXECUTION_ROLE = sagemaker.get_execution_role()\n",
     "    SEED = 23\n",
     "    INSTANCE_COUNT = 1\n",
+    "    INSTANCE_TYPE = \"ml.p2.xlarge\"\n",
     "    MAX_JOBS = 4\n",
     "    MAX_PARALLEL_JOBS = 2\n",
     "    MONITORING_INTERVAL_MILLIS = 100\n",
@@ -107,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dataset\n",
+    "## `Dataset`\n",
     "TODO: Explain what dataset you are using for this project. Maybe even give a small overview of the classes, class distributions etc that can help anyone not familiar with the dataset get a better understand of it."
    ]
   },
@@ -117,13 +125,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO: Fetch and upload the data to AWS S3\n",
-    "\n",
-    "# Command to download and unzip data\n",
+    "# Download and unzip dataset\n",
     "!mkdir data\n",
     "!wget https://github.com/DataScienceNigeria/Research-Papers-by-Data-Science-Nigeria/raw/master/AFRIFASHION1600:%20A%20Contemporary%20African%20Fashion%20Dataset%20for%20Computer%20Vision/data/AFRIFASHION1600.zip -P data\n",
-    "!unzip data/AFRIFASHION1600.zip -d data && rm data/AFRIFASHION1600.zip\n",
-    "!python dataset.py --dataset_path data/AFRIFASHION1600 --train_size 0.7 #--seed {c.SEED}"
+    "!unzip data/AFRIFASHION1600.zip -d data && rm data/AFRIFASHION1600.zip"
    ]
   },
   {
@@ -132,6 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Split dataset into train and validation sets\n",
     "!python oge/dataset.py --dataset_path data/AFRIFASHION1600 --train_size 0.7 #--seed {c.SEED}"
    ]
   },
@@ -141,7 +147,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!aws s3 sync data/AFRIFASHION1600 ${DEFAULT_BUCKET_NAME}afrifashion1600/ > data_upload.log 2>&1"
+    "# Upload dataset to S3\n",
+    "!mkdir logs\n",
+    "!aws s3 sync data/AFRIFASHION1600 ${DEFAULT_BUCKET_NAME}afrifashion1600/ --recursive > logs/data_upload.log 2>&1"
    ]
   },
   {
@@ -150,6 +158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Confirm dataswet upload to S3\n",
     "!aws s3 ls -d ${DEFAULT_BUCKET_NAME}afrifashion1600/"
    ]
   },
@@ -157,7 +166,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Hyperparameter Tuning\n",
+    "## `Hyperparameter Tuning`\n",
     "**TODO:** This is the part where you will finetune a pretrained model with hyperparameter tuning. Remember that you have to tune a minimum of two hyperparameters. However you are encouraged to tune more. You are also encouraged to explain why you chose to tune those particular hyperparameters and the ranges.\n",
     "\n",
     "**Note:** You will need to use the `hpo.py` script to perform hyperparameter tuning."
@@ -211,9 +220,9 @@
     "    source_dir = \"oge\",\n",
     "    entry_point=\"train_model.py\",\n",
     "    base_job_name=\"oge-afrifashion-resnet50-pytorch\",\n",
-    "    role=get_execution_role(),\n",
-    "    instance_count=INSTANCE_COUNT,\n",
-    "    instance_type=\"ml.p2.xlarge\",   # TODO\n",
+    "    role=config.EXECUTION_ROLE,\n",
+    "    instance_count=config.INSTANCE_COUNT,\n",
+    "    instance_type=config.INSTANCE_TYPE,   # TODO\n",
     "    framework_version=\"1.8\",\n",
     "    py_version=\"py36\"\n",
     ")"
@@ -230,8 +239,8 @@
     "    objective_metric_name,\n",
     "    hyperparameter_ranges,\n",
     "    metric_definitions,\n",
-    "    max_jobs=MAX_JOBS,\n",
-    "    max_parallel_jobs=MAX_PARALLEL_JOBS,   \n",
+    "    max_jobs=config.MAX_JOBS,\n",
+    "    max_parallel_jobs=config.MAX_PARALLEL_JOBS,   \n",
     "    objective_type=objective_type\n",
     ")"
    ]
@@ -302,8 +311,8 @@
    "source": [
     "# TODO: Set up debugging and profiling rules and hooks\n",
     "profiler_config = ProfilerConfig(\n",
-    "    system_monitor_interval_millis=MONITORING_INTERVAL_MILLIS,\n",
-    "    framework_profile_params=FrameworkProfile(num_steps=PROFILE_EVERY_X_STEPS)\n",
+    "    system_monitor_interval_millis=config.MONITORING_INTERVAL_MILLIS,\n",
+    "    framework_profile_params=FrameworkProfile(num_steps=config.PROFILE_EVERY_X_STEPS)\n",
     ")"
    ]
   },
@@ -332,8 +341,8 @@
     "    entry_point=\"train_model.py\",\n",
     "    base_job_name=\"oge-afrifashion-resnet50-pytorch\",\n",
     "    role=get_execution_role(),\n",
-    "    instance_count=INSTANCE_COUNT,\n",
-    "    instance_type=\"ml.p2.xlarge\",   # TODO\n",
+    "    instance_count=config.INSTANCE_COUNT,\n",
+    "    instance_type=config.INSTANCE_TYPE,   # TODO\n",
     "    framework_version=\"1.8\",\n",
     "    py_version=\"py36\",\n",
     "    profiler_config=profiler_config,\n",
@@ -356,12 +365,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "session = boto3.session.Session()\n",
-    "region = session.region_name\n",
-    "\n",
     "training_job_name = estimator.latest_training_job.name\n",
     "print(f\"Training jobname: {training_job_name}\")\n",
-    "print(f\"Region: {region}\")"
+    "print(f\"Region: {config.REGION}\")"
    ]
   },
   {
@@ -370,7 +376,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "training_job = TrainingJob(training_job_name, region)\n",
+    "training_job = TrainingJob(training_job_name, config.REGION)\n",
     "training_job.wait_for_sys_profiling_data_to_be_available()"
    ]
   },
